--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.90.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "next": "15.3.2",
     "next-sanity": "^9.12.0",
     "react": "^19.0.0",
@@ -21,7 +22,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.3.2"
+    "eslint-config-next": "15.3.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
